# strandsclaw

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md  speckit.analyze.agent.md  speckit.checklist.agent.md  speckit.clarify.agent.md  speckit.constitution.agent.md  speckit.implement.agent.md  speckit.plan.agent.md  speckit.specify.agent.md  speckit.tasks.agent.md  speckit.taskstoissues.agent.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/extensions/git/: git-config.yml
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
doc/: future_improvements_todo.md  initial_project_plan.md
specs/001-workspace-chat-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-workspace-chat-agent/checklists/: requirements.md
specs/001-workspace-chat-agent/contracts/: cli-chat-contract.md  state-file-contract.md
specs/002-openclaw-context-integration/: spec.md
specs/003-add-acp-adapter/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-add-acp-adapter/checklists/: requirements.md
src/strandsclaw/: __init__.py  __main__.py  config.py
tests/: test_acp_agent.py  test_bootstrap.py  test_chat_runtime.py  test_file_scope.py  test_session_store.py
workspace-template/: AGENTS.md  BOOTSTRAP.md  IDENTITY.md  SOUL.md
(+26 files in other folders)
